Link style sheet.

--- a/layout.html
+++ b/layout.html
@@ -1,14 +1,132 @@
-
-
+<!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8">
+    <title>Assignment 2</title>
+    <link rel=stylesheet href="style.css">
+
+  </head>
   <body>
     <p> Hello!</p>
+
+    <img src="http://s3.amazonaws.com/codecademy-blog/assets/f3a16fb6.jpg"/>
+  <! this is a comment>
+
+
+  <h1>
+
+  </h1>
+  <table>
+    <colgroup span="6" class="columns"></colgroup>
+    <tr>
+      <th>one</th>  
+      <th>one</th>  
+      <th>one</th>  
+      <th>one</th>  
+      <th>one</th>  
+      <th>one</th>  
+    </tr>
+
+
+  
+    <tr>
+      <th>one</th>  
+      <th>one</th>  
+      <th>one</th>  
+      <th>one</th>  
+      <th>one</th>  
+      <th>one</th>  
+    </tr>
+    <tr>
+      <th>one</th>  
+      <th>one</th>  
+      <th>one</th>  
+      <th>one</th>  
+      <th>one</th>  
+      <th>one</th>  
+    </tr>
+ 
+    <tr>
+      <th>one</th>  
+      <th>one</th>  
+      <th>one</th>  
+      <th>one</th>  
+      <th>one</th>  
+      <th>one</th>  
+    </tr>
+
+
+    <tr>
+      <th>one</th>  
+      <th>one</th>  
+      <th>one</th>  
+      <th>one</th>  
+      <th>one</th>  
+      <th>one</th>  
+    </tr>
+     
+     
+    <tr>
+      <th>one</th>  
+      <th>one</th>  
+      <th>one</th>  
+      <th>one</th>  
+      <th>one</th>  
+      <th>one</th>  
+    </tr>
+
+
+
+
+  </table>
+
+
+<section>
+  <dl> 
+    <dt>One</dt>
+    <dd>is a number</dd>
+	<dt>Two</dt>
+	<dd>is a nubmer</dd>
+    <dt>A</dt>
+    <dd>is a leter</dd>
+  </dl>
+
+  <h1> Make a list</h1>
+
+
+
+</section>
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
   </body>
 
 
 
 
-
+  
 
 </html>
