--- a/layout.html
+++ b/layout.html
@@ -80,9 +80,9 @@
     <dt>One</dt>
     <dd>is a number</dd>
 	<dt>Two</dt>
-	<dd>is a nubmer</dd>
+	<dd>is a number</dd>
     <dt>A</dt>
-    <dd>is a leter</dd>
+    <dd>is a letter</dd>
   </dl>
 
 
