--- a/layout.html
+++ b/layout.html
@@ -23,7 +23,7 @@
       <th>five</th>  
     </tr> 
   </thead>
-  </body>   
+  <body>   
      <tr>
       <th>one</th>  
       <td>one</td>  
@@ -173,7 +173,7 @@
 <!Create wrapped text>
 
 <div>
-  <img src="https://lh5.googleusercontent.com/JZwvcoUsSd8kvvsA7QGZqW0Snvx2SGhhySSPWXaHcGY=w166-h207-p-no">
+  <img src="https://lh5.googleusercontent.com/JZwvcoUsSd8kvvsA7QGZqW0Snvx2SGhhySSPWXaHcGY=w166-h207-p-no" alt="wood fence"/>
 </div>
 It was a heavy mass of building, that chateau of Monsieur the Marquis, with a large stone courtyard before it, and two stone sweeps of staircase meeting in a stone terrace before the principal door. A stony business altogether, with heavy stone balustrades, and stone urns, and stone flowers, and stone faces of men, and stone heads of lions, in all directions. As if the Gorgon's head had surveyed it, when it was finished, two centuries ago.
 Up the broad flight of shallow steps, Monsieur the Marquis, flambeau preceded, went from his carriage, sufficiently disturbing the darkness to elicit loud remonstrance from an owl in the roof of the great pile of stable building away among the trees. All else was so quiet, that the flambeau carried up the steps, and the other flambeau held at the great door, burnt as if they were in a close room of state, instead of being in the open night-air. Other sound than the owl's voice there was none, save the falling of a fountain into its stone basin; for, it was one of those dark nights that hold their breath by the hour together, and then heave a long low sigh, and hold their breath again.
